[project]
name = "book-emds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pyside6==6.8.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.14.1",
    "sympy>=1.13.3",
]
